--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg fixed-top nav-menu">
-      <a href="" class="navbar-brand text-light text-uppercase">
+      <a href="#" class="navbar-brand text-light text-uppercase">
         <span class="h3 font-weight-bold">photo</span><span class="h2">X<span class="h3 font-weight-bold">cape</span></span>
       </a>
       <button class="navbar-toggler nav-button" type="button" data-toggle="collapse" data-target="#myNavbar">
@@ -30,25 +30,25 @@
       <div class="collapse navbar-collapse justify-content-end text-uppercase" id="myNavbar">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a href="" class="nav-link m-2 menu-item nav-active">Home</a>
+            <a href="#" class="nav-link m-2 menu-item nav-active">Home</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link m-2 menu-item">Mission</a>
+            <a href="#mission" class="nav-link m-2 menu-item">Mission</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link m-2 menu-item">Collection</a>
+            <a href="#collection" class="nav-link m-2 menu-item">Collection</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link m-2 menu-item">Gallery</a>
+            <a href="#gallery" class="nav-link m-2 menu-item">Gallery</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link m-2 menu-item">Customers</a>
+            <a href="#customers" class="nav-link m-2 menu-item">Customers</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link m-2 menu-item">Pricing</a>
+            <a href="#pricing" class="nav-link m-2 menu-item">Pricing</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link m-2 menu-item">Content</a>
+            <a href="#contact" class="nav-link m-2 menu-item">Contact</a>
           </li>
         </ul>
       </div>
@@ -70,7 +70,7 @@
   <!-- End Header -->
 
   <!-- Mission -->
-  <section class="p-5 mission">
+  <section class="p-5 mission" data-spy="scroll" id="mission">
     <div class="container-fluid">
       <!-- Title -->
       <div class="row text-white text-center">
@@ -115,7 +115,7 @@
   <!-- End of Mission -->
 
   <!-- Collection -->
-  <section class="py-4 collection">
+  <section class="py-4 collection" data-spy="scroll" id="collection">
     <!-- Title -->
     <div class="container-fluid">
       <div class="row text-center">
@@ -181,7 +181,7 @@
   <!-- End of Collection -->
 
   <!-- Gallery -->
-  <section class="py-5">
+  <section class="py-5" data-spy="scroll" id="gallery">
     <div class="container-fluid">
       <!-- Title -->
       <div class="row text-muted text-center">
@@ -231,7 +231,7 @@
   <!-- End of Gallery -->
 
   <!-- Customers -->
-  <section class="p-5 customers">
+  <section class="p-5 customers" data-spy="scroll" id="customers">
     <div class="container-fluid">
       <!-- Title -->
       <div class="row text-white text-center">
@@ -332,7 +332,7 @@
   <!-- End of Customers -->
 
   <!-- Pricing -->
-  <section class="bg-light text-center p-5">
+  <section class="bg-light text-center p-5" data-spy="scroll" id="pricing">
     <div class="container-fluid">
       <!-- Title -->
       <div class="row text-muted text-center">
@@ -406,7 +406,7 @@
   <!-- End of Pricing -->
 
   <!-- Contact -->
-  <section class="contact p-5">
+  <section class="contact p-5" data-spy="scroll" id="contact">
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-5 pb-4">
@@ -447,22 +447,22 @@
               <a href="#" class="footer-link">Home</a>
             </li>
             <li>
-              <a href="#" class="footer-link">Mission</a>
+              <a href="#mission" class="footer-link">Mission</a>
             </li>
             <li>
-              <a href="#" class="footer-link">Collection</a>
+              <a href="#collection" class="footer-link">Collection</a>
             </li>
             <li>
-              <a href="#" class="footer-link">Gallery</a>
+              <a href="#gallery" class="footer-link">Gallery</a>
             </li>
             <li>
-              <a href="#" class="footer-link">Customers</a>
+              <a href="#customers" class="footer-link">Customers</a>
             </li>
             <li>
-              <a href="#" class="footer-link">Pricing</a>
+              <a href="#pricing" class="footer-link">Pricing</a>
             </li>
             <li>
-              <a href="#" class="footer-link">Contact</a>
+              <a href="#contact" class="footer-link">Contact</a>
             </li>
           </ul>
         </div>
